<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorFragments"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="149dp"
        android:layout_height="117dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/logomenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatarImage"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="{ INVICTUS APP Nombre}"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignOut"
        app:layout_constraintTop_toBottomOf="@+id/avatarImage"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/idGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/avatarImage"
        android:layout_marginTop="220dp"
        android:padding="4dp"
        app:columnCount="2"
        app:layout_constraintTop_toBottomOf="@+id/tvUserDetail"
        app:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPerfil"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?selectableItemBackground"
            android:onClick="goProfile"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/profile" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/MiPerfil"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardNoticias"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?selectableItemBackground"
            android:onClick="goNews"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/noticias" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Noticias"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMisSolicitudes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?selectableItemBackground"
            android:onClick="goRequests"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/solicitudes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/MisSolicitudes"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardReembolsos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?selectableItemBackground"
            android:onClick="goStorage"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/reembolso" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Reembolsos"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCursos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?selectableItemBackground"
            android:onClick="goCourses"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/cursos" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Cursos"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardGiftcard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?selectableItemBackground"
            android:onClick="goGiftcards"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/giftcard" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Giftcards"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatarImage"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="Cerrar sesión"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvUserDetail"
        tools:layout_editor_absoluteX="-2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>